# QueryMind

./: .gitignore  README.md  debug.txt  pyproject.toml  requirements.txt
app/agents/: InterpreterAgent.py  insights_generator.py  intent_corrector.py  llm_intepreter.py  narrator.py  planner.py
app/cli/: main.py  tui_app.py  ui.py
app/core/: context.py  logger.py  pipeline.py
app/data/: schema_engine.py  type_caster.py
app/data/connectors/: csv_connector.py  excel_connector.py  json_connector.py  parquet_connector.py
app/data/samples/: SuperStoreUS-2015.xlsx  sales_headers_with_special_chars.csv
app/executor/: sheet_selector.py
app/llm/: ollama_client.py
app/prompts/: interpreter_prompt.txt
app/security/: input_guard.py  schema_filter.py
app/tests/: llm_test.py
app/tools/: analyzer.py  data_profiler.py  join_resolver.py  session_logger.py  sql_writer.py
data/samples/: SuperStoreUS-2015.xlsx  sales .csv  sales_headers_only.csv  sales_one_column.csv  test_bom_encoding.csv
querymind_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
